--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chai-as-promised": "^5.1.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.1",
+    "gulp-eslint": "^1.0.0",
     "gulp-mocha": "^2.1.3",
     "gulp-nodemon": "^2.0.4",
     "mocha": "^2.3.3",
