--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gulp-nodemon": "^2.0.4",
     "mocha": "^2.3.3",
     "sinon": "^1.16.1",
-    "supertest": "^1.1.0"
+    "supertest": "^1.1.0",
+    "supertest-as-promised": "^2.0.2"
   }
 }
