--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Tag those marsupials",
   "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "gulp test",
+    "start": "gulp serve",
+    "preinstall": "./install-global-dependencies"
   },
   "repository": {
     "type": "git",
@@ -35,9 +36,6 @@
     "url": "https://github.com/nature-of-js/field-work/issues"
   },
   "homepage": "https://github.com/nature-of-js/field-work#readme",
-  "scripts": {
-    "preinstall": "if command -v \"apt-get\" >/dev/null 2>&1; then sudo apt-get update && sudo apt-get install libkrb5-dev; fi"
-  },
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
